--- a/css/home.css
+++ b/css/home.css
@@ -9,9 +9,9 @@ body {
     scroll-behavior: smooth; /* Enables smooth scrolling */
     background-image: url('../images/background.jpg');
     background-size: cover;                    /* Ensures the image covers the entire body */
-    background-attachment: fixed;              /* Fixes the image so it doesn't move when scrolling */
-    background-position: center;               /* Centers the image */
-    background-repeat: no-repeat; 
+    background-attachment: fixed;             
+    background-position: center;               
+    /* background-repeat: no-repeat;  */
 }
 
 nav {
